@@ -1,5 +1,6 @@
 <html>
 	<head>
-	    <script type="text/javascript" src="scripts/background.js"></script>
+	    <script type="text/javascript" src="/scripts/localstorage.js"></script>
+	    <script type="text/javascript" src="/scripts/background.js"></script>
 	</head>
 </html>
